--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
   <div class="container">
-    <header>
+    <header class="fade-hidden fade-in-up delay-1">
       <img src="logo.png" alt="Logo MicrosYA" class="logo"/>
       <h1>MicrosYA</h1>
       <p class="slogan">Soluciones inteligentes para traslados institucionales</p>
     </header>
 
     <main>
-      <section class="descripcion">
+      <section class="descripcion fade-hidden fade-in-up delay-2">
         <p>
           MicrosYA es una aplicación web que busca solucionar problemas relacionados a la logística y/o administración de traslados privados donde se presenta una gran cantidad de personas, actualmente orientado a instituciones.
         </p>
       </section>
 
-      <section class="formulario">
+      <section class="formulario fade-hidden fade-in-up delay-3">
         <h2>Contactanos</h2>
         <form action="https://formsubmit.co/matiasbeck07@gmail.com" method="POST">
           <div class="campo">
@@ -43,7 +43,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="fade-hidden fade-in-up delay-4">
       <p>&copy; 2025 MicrosYA</p>
     </footer>
   </div>
