--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <textarea name="mensaje" id="mensaje" rows="5" required></textarea>
           </div>
           <input type="hidden" name="_captcha" value="false">
+          <input type="hidden" name="_next" value="https://microsya-landing.vercel.app/gracias.html">
           <button type="submit">Enviar consulta</button>
         </form>
       </section>
